// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render if not at least 2 children 1`] = `""`;

exports[`should render a collapsible block 1`] = `
<div
  className="collapse-container"
>
  <a
    aria-expanded={false}
    aria-haspopup={true}
    className="link-no-underline"
    href="#"
    onClick={[Function]}
  >
    <OpenCloseIcon
      className="vertical-middle little-spacer-right"
      open={false}
    />
    Foo
  </a>
</div>
`;

exports[`should render a collapsible block 2`] = `
<div
  className="collapse-container"
>
  <a
    aria-expanded={true}
    aria-haspopup={true}
    className="link-no-underline"
    href="#"
    onClick={[Function]}
  >
    <OpenCloseIcon
      className="vertical-middle little-spacer-right"
      open={true}
    />
    Foo
  </a>
  <p
    key=".1"
  >
    Bar
  </p>
</div>
`;
